syntax = "proto3";
package NetworkMessages;

enum ActionType {
	Jump = 0;
	Sprint = 1;
	Crouch = 2;
	Prone = 3;
	Walk = 4;
	LeanLeft = 5;
	LeanRight = 6;

	OpenInventory = 20;
	Interact = 21;

	Fire = 30;
	Aim = 31;
	Scope = 32;
	Reload = 33;
	

}

enum ActionState {
	released = 0;
	pressed = 1;
}

enum AxisType {
	movementDirection = 0;
	lookDirection = 1;
	lookDelta = 2;
}

message Identity {
	string name = 1;
	oneof identity {
		int64 steamID = 2;
		int64 ipAddress = 3;
	}
}
message ChatString {
	string text = 1;
}
message ChatMessage {
	Identity sender = 1;
	ChatString chatString = 2;
} 



message ActionMessage{
	ActionType actionType = 1;
	ActionState actionState = 2;
}

message InputActionMessage {
	Identity inputOf = 1;
	ActionMessage action = 2;
}



message DirectionVector {
	float x = 1;
	float y = 2;
	optional float z = 3;
}


message InputMovementDirectionMessage {
	Identity inputOf = 1;
    DirectionVector direction = 2;
}

message InputLookDeltaMessage {
	Identity inputOf = 1;
	DirectionVector delta = 2;
}

message InputLookDirectionMessage {
	Identity inputOf = 1;
	DirectionVector direction = 2;
}

message InputFullCaptureMessage {
	Identity inputOf = 1;
	DirectionVector movementDirection = 2;
	repeated ActionMessage actions = 3;

}



message Position {
	float X =1;
	float Y =2;
	float Z=3;
}


message PlayerStateFullCapture {
	Identity stateOf = 1;
}



message ServerMessagePlayerJoin{
	Identity newPlayer = 1;

}

message ServerMessageSpawnPlayer {
	Identity player = 1;
	Position position = 2;
}

message ServerMessageLaunchGame {
	int64 mode =1;
}
